# rust-web

./: Cargo.toml
src/: config.rs  lib.rs  main.rs  state.rs
src/assets/: email.html
src/controllers/: mod.rs
src/controllers/users/: auth.rs  codes.rs  mod.rs
src/database/: mod.rs  redis.rs
src/errors/: json.rs  mod.rs  mongo.rs  validation.rs
src/models/: mod.rs
src/models/users/: auth.rs  codes.rs  mail_validator.rs  mod.rs  role.rs
src/routes/: default.rs  mod.rs  users.rs
src/utils/: email.rs  mod.rs  regex.rs  validation.rs
